--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -165,6 +165,34 @@ footer{
 
 }
 
-@media screen {
+.footer{
+    display: flex;
+    justify-content: space-around;
     
+}
+
+
+@media screen and ( max-width: 413px ) {
+    
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    .grid-container{
+        grid-template-columns: 1fr;
+        grid: auto;
+    }
+    .encabezado p{
+        max-width: 40ch;
+        text-align: center;
+    }
+    ul{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+    
+    }
+    .card{
+        font-size: 1.05em;
+    }
 }
