--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 /* contenedor principal */
@@ -63,7 +64,7 @@ img{
     justify-content: space-around;
     flex-wrap: wrap;
     color: rgb(53, 66, 89);
-    margin: 1.5%;
+    margin: 2%;
 }
 
 .lit, .trueno, .leon, .rene, .siddhartha, .duki, .tiago, .mon, .cancerbero{
@@ -87,7 +88,7 @@ img{
 .back{
     transform: rotateY(180deg);
     text-align: center;
-    padding: 15px;
+    padding: 10px;
 }
 
 .lit:hover {
@@ -125,10 +126,19 @@ img{
     transform: rotateY(180deg);
 }
 
-button{
+.button{
+    display: inline-block;
     color: rgb(53, 66, 89);
     border-radius: 2em;
     border: none;
+    background-color: rgb(205, 194, 174);
+    text-decoration: none;
+}
+
+button{
+    color: rgb(53, 66, 89);
+    border-radius: 2em;
+    border: 1px solid;
     background-color: rgb(205, 194, 174);
 }
 
