--- a/CSS/style.css
+++ b/CSS/style.css
@@ -188,7 +188,7 @@ footer{
         margin: 0;
         padding: 0;
     }
-    .grid-container{
+    .main-container{
         grid-template-columns: 1fr;
         grid: auto;
     }
