--- a/CSS/styleLit.css
+++ b/CSS/styleLit.css
@@ -103,3 +103,65 @@ ul{
     grid-template-columns: auto;
     justify-items: center;
 }
+
+@media screen and (max-width: 576px) {
+    body{
+        margin: 0;
+        padding: 0;
+        width: 575px;
+        font-size: 1em;
+    }
+
+    .main-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: "head"
+        "aside"
+        "main";
+        margin: 0;
+        padding: 0;
+    }
+
+    .encabezado{
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0;
+        margin: 0;
+    }
+
+    .encabezado p {
+        width: 90vw;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    ul{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    li{
+        padding: .5em;
+        margin: .5em;
+    }
+    img{
+        display: none;
+    }
+
+    .sobrelit{
+        width: 80vw;
+        columns: 2;
+    }
+    video{
+        width: 60vw;
+        margin: 2em 0;
+    }
+}
+    
